Scala code coverage - use sbt-coveralls plugin

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ language: scala
 jdk: oraclejdk8
 
 scala:
-   - 2.12.4
+  - 2.12.4
 
 script:
-   - sbt ++$TRAVIS_SCALA_VERSION test
+  - sbt ++$TRAVIS_SCALA_VERSION clean coverage test coverageReport
+after_success:
+  - sbt coveralls
 
 # These directories are cached to S3 at the end of the build
 cache:
