--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,28 @@
+# http://www.scala-sbt.org/1.0/docs/Travis-CI-with-sbt.html
+
+# Use container-based infrastructure
+sudo: false
+
 language: scala
+
+jdk: oraclejdk8
+
+scala:
+   - 2.12.4
+
+script:
+   - sbt ++$TRAVIS_SCALA_VERSION test
+
+# These directories are cached to S3 at the end of the build
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt
+before_cache:
+  # Tricks to avoid unnecessary cache updates
+  - find $HOME/.sbt -name "*.lock" | xargs rm
+  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
+
+# Turn off email notifications
+notifications:
+  email: false
